fixes textarea on safari

--- a/app/styles/components/map/c-form.scss
+++ b/app/styles/components/map/c-form.scss
@@ -46,6 +46,7 @@
     resize: none;
 
     @media #{$mq-tablet} {
+      height: auto;
       min-height: none;
     }
   }
